--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -1,8 +1,7 @@
 .map__wrapper--outer {
   position: relative;
-  height: 0;
-  width: 100%;
-  padding-bottom: 66%;
+  height: 100vh;
+  width: 100vw;
 }
 
 .map__wrapper--inner {
