update marker ui

--- a/src/scss/recommendation.scss
+++ b/src/scss/recommendation.scss
@@ -1,28 +1,40 @@
-$dimensions: 20px;
+$dimensions: 30px;
+$scale: 0.75;
 
 .recommendation {
-  margin-left: -$dimensions / 2;
-  margin-top: -$dimensions / 2;
+  position: relative;
 
   &__marker {
+    position: absolute;
+    left: -($dimensions / 2);
+    top: -($dimensions / 2);
     background: white;
     border-radius: 50%;
     border: 2px darken($info, 5) solid;
     width: $dimensions;
     height: $dimensions;
+    transform: scale($scale);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: all ease 400ms;
   }
 
   &--hovered {
     .recommendation__marker {
-      width: $dimensions * 1.5;
-      height: $dimensions * 1.5;
+      transform: scale(1);
+      border-width: 4px;
     }
   }
 
   &__hover-box {
+    padding: 15px;
+    width: 150px;
     background: white;
     z-index: 100;
-    position: relative;
+    position: absolute;
+    top: ($dimensions / 2) + 5px;
+    left: -75px;
+
   }
 }
